samples/_failures_safe/1761547400_0aced2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84b0a016.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_84b0a016.c:161:9: error: expected expression at end of input
  161 |         int right =
      |         ^~~
./samples/SAFE/__tmp_84b0a016.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_84b0a016.c:161:9: error: expected declaration or statement at end of input
